# ifsmurd

./: LICENSE  README.md
app/rust-iced/: Cargo.toml
app/rust-iced/src/: com_core.rs  gui.rs  main.rs  utils.rs
app/rust-iced/src/com_core/: control.rs  message.rs  serial.rs
fpga/gowin/comm/: .gitignore  comm.gprj
fpga/gowin/comm/src/: comUnit.v  crcTable.v  dataBuffer.v  monit.v  tangnano1k.cst  uartRx.v  uartTx.v
fpga/sim/coco/: .gitignore  Makefile  comWaveform.gtkw  monitWaveform.gtkw  rxWaveform.gtkw  testCom.py  testMonit.py  testRx.py  testTx.py  txWaveform.gtkw
fpga/sim/monit-verilog/: crcTable.v  dataBuffer.v  monit.v  tangnano1k.cst  uartRx.v  uartTx.v
