[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["cargo", "derive", "string", "debug", "deprecated"] }
fixed = "1.25.1"
hex = "0.4.3"
iced = { version = "0.12.1", features = ["canvas", "debug", "tokio", "system", "advanced"] }
native-dialog = "0.7.0"
plotters = "0.3.5"
plotters-iced = "0.10.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serialport = "4.3.0"
sudo = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-serial = "5.4.4"
